syntax = "proto3";

package app.improving.productcontext;

import "app/improving/product/api/product_api.proto";
import "app/improving/product/domain/product_context_domain.proto";
import "kalix/annotations.proto";

message TicketByEventRequest {
    string event_id = 1;
}

message TicketByEventResponse {
    repeated productcontext.product.ApiProduct products = 1;
}


service TicketByEventView {
    option (kalix.codegen) = {
        view: {}
    };
    rpc ProcessProductCreated(productcontext.ProductCreated) returns (productcontext.product.ApiProduct) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "products"
        };
        option (kalix.method).view.update = {
            table: "ticket_by_event_product"
            transform_updates: true
        };
    }

    rpc ProcessProductInfoUpdated(productcontext.ProductInfoUpdated) returns (productcontext.product.ApiProduct) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "products"
        };
        option (kalix.method).view.update = {
            table: "ticket_by_event_product"
            transform_updates: true
        };
    }

    rpc ProcessProductDeleted(productcontext.ProductDeleted) returns (productcontext.product.ApiProduct) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "products"
        };
        option (kalix.method).view.update = {
            table: "ticket_by_event_product"
            transform_updates: true
        };
    }

    rpc ProcessProductActivated(productcontext.ProductActivated) returns (productcontext.product.ApiProduct) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "products"
        };
        option (kalix.method).view.update = {
            table: "ticket_by_event_product"
            transform_updates: true
        };
    }

    rpc ProcessProductInactivated(productcontext.ProductInactivated) returns (productcontext.product.ApiProduct) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "products"
        };
        option (kalix.method).view.update = {
            table: "ticket_by_event_product"
            transform_updates: true
        };
    }

    rpc FindMembersByEvent(TicketByEventRequest) returns (TicketByEventResponse) {
        option (kalix.method).view.query = {
            query: "SELECT "
                    "* AS products "
                    "FROM ticket_by_event_product "
                    "WHERE ticket_by_event_product.info.event.event_id = :event_id "
        };
    }


}
